Add support for JDK 11 as runtime environment
- bump asm version to 6.2 to add support for java 11.
- remove java.xml.bind since it's removed as part of https://bugs.openjdk.java.net/browse/JDK-8189188
- update DiagnosticReportCommandTest to have a specific parameter for java 11
  because of https://bugs.openjdk.java.net/browse/JDK-8202127 and current
  surefire behavior